# Mastering_C

./: AiportSimulation (Aeroplanes) .c  BTree.c  CMakeLists.txt  GenericHashTable.c  GenericQueueDataStructure.c  HashTable.c  LinkedList.c  Queue.c  README.md  SortColors.c  StackImplementation.c  Strings.c  main.c
Algorithms/: Huffman.c  O.c  QuickSort.c  Round.c  WordsFrecuency.c
Algorithms/BloomFilter/: BloomFilter.c  BloomFilter.h  bitArray.c  bitArray.h  hashf.c  hashf.h
Algorithms/Dynamic Programming/: MaxConsecutiveSum.c
Data Structures/: BTree.c  GenericHashTable.c  GenericQueueDataStructure.c  LinkedList.c  Queue.c
LeetCodes/: SortColors.c  TwoSum.c
Use Cases/: AiportSimulation (Aeroplanes) .c  Factorial.c
solutions/c/binary/1/: binary.c
solutions/c/binary/2/: binary.c
solutions/c/binary/3/: binary.c
solutions/c/binary/4/: binary.c
solutions/c/binary/5/: binary.c
solutions/c/difference-of-squares/1/: difference_of_squares.c
solutions/c/difference-of-squares/2/: difference_of_squares.c
solutions/c/grains/1/: grains.c
solutions/c/grains/2/: grains.c
solutions/c/grains/3/: grains.c
solutions/c/grains/4/: grains.c
solutions/c/grains/5/: grains.c
solutions/c/leap/1/: leap.c
solutions/c/leap/2/: leap.c
solutions/c/leap/3/: leap.c
solutions/c/leap/4/: leap.c
solutions/c/leap/5/: leap.c
solutions/c/queen-attack/1/: queen_attack.c
solutions/c/queen-attack/2/: queen_attack.c
solutions/c/queen-attack/3/: queen_attack.c
solutions/c/queen-attack/4/: queen_attack.c
solutions/c/queen-attack/5/: queen_attack.c
(+4 files in other folders)
